# cstatic

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  config.toml  improvement-plan-v2.md  improvement-plan-v3.md  improvement-plan-v4-geo.md  improvement-plan.md  llms.txt
.github/workflows/: build.yml  release.yml
_data/: authors.yml  products.json
docs/: config.md
scripts/: bump-version.sh
skills/: README.md  cstatic-add-collection.md  cstatic-add-shortcode.md  cstatic-configure-seo.md  cstatic-deploy.md  cstatic-diagnose.md  cstatic-new-content.md
src/: about.md  index.md  main.cpp  stb_impl.cpp
src/assets/: asset_pipeline.cpp  asset_pipeline.hpp
src/cli/: content_generator.cpp  content_generator.hpp  error_format.cpp  error_format.hpp
src/config/: config.cpp  config.hpp
src/content/: authors_index.cpp  authors_index.hpp  frontmatter.cpp  frontmatter.hpp  link_graph.cpp  link_graph.hpp  markdown.cpp  markdown.hpp  passage_index.cpp  passage_index.hpp  readability.cpp  readability.hpp  schema_blocks.cpp  schema_blocks.hpp  shortcodes.cpp  shortcodes.hpp  sources_block.cpp  sources_block.hpp  toc.cpp  toc.hpp
src/data/: data_loader.cpp  data_loader.hpp
src/hash/: hash_store.cpp  hash_store.hpp
src/modules/: analytics.cpp  analytics.hpp  json_feed.cpp  json_feed.hpp  llms_txt.cpp  llms_txt.hpp  og_images.cpp  og_images.hpp  robots.cpp  robots.hpp  rss.cpp  rss.hpp  search.cpp  search.hpp  seo_schema.cpp  seo_schema.hpp  sitemap.cpp  sitemap.hpp  sitemap_ai.cpp  sitemap_ai.hpp  well_known.cpp  well_known.hpp
src/pipeline/: builder.cpp  builder.hpp  geo_audit.cpp  geo_audit.hpp  link_checker.cpp  link_checker.hpp
src/posts/: draft-post.md  hello-world.md
src/server/: dev_server.cpp  dev_server.hpp  file_watcher.cpp  file_watcher.hpp
src/template/: renderer.cpp  renderer.hpp
src/utils/: file_io.cpp  file_io.hpp  glob.hpp  path.cpp  path.hpp  slugify.hpp  terminal.hpp
static/css/: style.css
static/images/: placeholder.txt
static/js/: app.js
templates/: default.html  product.html  products.html
tests/: CMakeLists.txt  bench_build.cpp  test_analytics.cpp  test_authors_index.cpp  test_build_integration.cpp  test_config.cpp  test_content_generator.cpp  test_data_loader.cpp  test_error_format.cpp  test_file_watcher.cpp  test_frontmatter.cpp  test_geo_audit.cpp  test_hash_store.cpp  test_link_checker.cpp  test_link_graph.cpp  test_llms_txt.cpp  test_markdown.cpp  test_minifier.cpp  test_passage_index.cpp  test_path_utils.cpp  test_readability.cpp  test_robots.cpp  test_schema_blocks.cpp  test_seo_schema.cpp  test_shortcodes.cpp  test_sitemap_ai.cpp  test_sources_block.cpp  test_template_renderer.cpp  test_toc.cpp  test_util.hpp  test_well_known.cpp
